WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307431
Navigating with the Layers inspector tab open breaks the visualization
https://bugs.webkit.org/show_bug.cgi?id=307431
Summary
Navigating with the Layers inspector tab open breaks the visualization
Adrian Perez
Reported
2026-02-10 06:05:12 PST
Steps to reproduce: 1. run-minibrowser --wpe
https://blogs.igalia.com/webkit/
2. Open the Inspector with Ctrl+Shift+I 3. In the inspector window, open the “Layers” tab 4. Click the “About” link at the top of the page Expected outcome: The “Layers” tab updates itself with the contents of the newly loaded page. Actual outcome: The “Layers” tab remains empty and no longer updates. The following errors are written to the standard error stream: resource:///org/webkit/inspector/UserInterface/Controllers/ConsoleManager.js:241:27: CONSOLE ASSERT ERROR resource:///org/webkit/inspector/UserInterface/Base/Main.js:3131:22: CONSOLE ERROR Error: Layer has zero size This affects both the “main” branch and the “webkitglib/2.50” one.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-02-10 06:23:19 PST
(In reply to Adrian Perez from
comment #0
)
> This affects both the “main” branch and the “webkitglib/2.50” one.
This should read: the “main” branch and the “webkitglib/2.52” one.
Adrian Perez
Comment 2
2026-02-11 00:25:12 PST
As a workaround, if the “Layers” tab gets stuck like this, closing the inspector and reopening it again works (but it's an annoyance).
Adrian Perez
Comment 3
2026-02-11 01:09:39 PST
The empty size error comes from InspectorLayerTreeAgent::requestContent(), defined in Source/WebCore/inspector/agents/InspectorLayerTreeAgent.cpp: Inspector::CommandResult<String> InspectorLayerTreeAgent::requestContent(const Inspector::Protocol::LayerTree::LayerId& layerId) { // ... FloatSize layerSize = graphicsLayer->size(); if (layerSize.isEmpty()) return makeUnexpected("Layer has zero size"_s); // ... }
Radar WebKit Bug Importer
Comment 4
2026-02-20 15:29:32 PST
<
rdar://problem/170836910
>
Razvan Caliman
Comment 5
2026-04-30 07:37:41 PDT
This affects the macOS build of Web Inspector as well. It's not isolated to GTK/WPE. The root cause is a race condition during page reload/navigation.
Razvan Caliman
Comment 6
2026-04-30 08:15:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63972
EWS
Comment 7
2026-05-01 09:43:15 PDT
Committed
312435@main
(95810670932e): <
https://commits.webkit.org/312435@main
> Reviewed commits have been landed. Closing PR #63972 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug